--- a/package.json
+++ b/package.json
@@ -6,10 +6,16 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "commit": "npx git-cz"
   },
   "dependencies": {
+    "@commitlint/cli": "^17.0.3",
+    "@commitlint/config-conventional": "^17.0.3",
     "@types/styled-components": "^5.1.25",
+    "commitizen": "^4.2.5",
+    "commitlint": "^17.0.3",
+    "conventional-changelog-cli": "^2.2.2",
     "next": "12.2.2",
     "react": "18.2.0",
     "react-dom": "18.2.0",
