--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,70 +1,3 @@
 {
-  "root": true,
-  "env": {
-    "browser": true,
-    "es2020": true,
-    "node": true
-  },
-  "extends": [
-    "next/core-web-vitals",
-    "eslint:recommended",
-    "plugin:@typescript-eslint/eslint-recommended",
-    "plugin:@typescript-eslint/recommended",
-    "plugin:react/recommended",
-    "plugin:jsx-a11y/recommended",
-    "plugin:import/errors",
-    "plugin:import/warnings",
-    "plugin:prettier/recommended"
-  ],
-  "parser": "@typescript-eslint/parser",
-  "parserOptions": {
-    "ecmaFeatures": {
-      "jsx": true
-    },
-    "ecmaVersion": 2020,
-    "sourceType": "module"
-  },
-  "plugins": ["@typescript-eslint", "react", "import"],
-  "settings": {
-    "react": {
-      "version": "detect"
-    },
-    "import/resolver": {
-      "node": {
-        "extensions": [".js", ".jsx", ".ts", ".tsx", ".json"]
-      },
-      "typescript": {
-        "config": "tsconfig.json",
-        "alwaysTryTypes": true
-      }
-    }
-  },
-  "rules": {
-    "@typescript-eslint/ban-types": [
-      "error",
-      {
-        "types": {
-          "{}": false
-        }
-      }
-    ],
-    "react/prop-types": ["off"],
-    "react/react-in-jsx-scope": "off",
-    "react/jsx-filename-extension": ["error", { "extensions": [".jsx", ".tsx"] }],
-    "import/order": ["error"],
-    "prettier/prettier": [
-      "error",
-      {
-        "trailingComma": "all",
-        "endOfLine": "lf",
-        "semi": false,
-        "singleQuote": true,
-        "printWidth": 80,
-        "tabWidth": 2
-      }
-    ],
-    "@next/next/no-img-element": "off",
-    "@next/next/no-page-custom-font": "off",
-    "react-hooks/exhaustive-deps": "off"
-  }
+  "extends": "next/core-web-vitals"
 }
