--- a/package.json
+++ b/package.json
@@ -12,14 +12,28 @@
   "dependencies": {
     "@commitlint/cli": "^17.0.3",
     "@commitlint/config-conventional": "^17.0.3",
+    "@reduxjs/toolkit": "^1.8.3",
+    "@types/react-redux": "^7.1.24",
     "@types/styled-components": "^5.1.25",
+    "@zeit/next-less": "^1.0.1",
+    "add": "^2.0.6",
+    "antd": "^4.21.7",
+    "axios": "^0.27.2",
     "commitizen": "^4.2.5",
     "commitlint": "^17.0.3",
     "conventional-changelog-cli": "^2.2.2",
+    "ethers": "^5.6.9",
+    "less": "^4.1.3",
+    "less-loader": "^11.0.0",
     "next": "12.2.2",
+    "next-with-less": "^2.0.5",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "styled-components": "^5.3.5"
+    "react-redux": "^8.0.2",
+    "redux-localstorage-simple": "^2.5.1",
+    "redux-persist": "^6.0.0",
+    "styled-components": "^5.3.5",
+    "yarn": "^1.22.19"
   },
   "devDependencies": {
     "@types/node": "18.0.6",
