fix(amplify): update

--- a/amplify.yml
+++ b/amplify.yml
@@ -6,7 +6,7 @@ frontend:
         - yarn install
     build:
       commands:
-        - yarn run prebuild && yarn run build
+        - yarn run build
   artifacts:
     baseDirectory: build
     files:
